core/tests/snapshots/tokenizer__Identifier.snap
---
source: core/tests/tokenizer.rs
expression: vec
---
[
    Token {
        kind: Identifier,
        value: Some(
            "identifier",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
                offset: 0,
            },
            end: Position {
                line: 1,
                column: 11,
                offset: 10,
            },
        },
        range: (
            0,
            10,
        ),
    },
]
