core/tests/snapshots/tokenizer__Simple Entry.snap
---
source: core/tests/tokenizer.rs
expression: vec
---
[
    Token {
        kind: NumericLiteral,
        value: Some(
            "100",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 1,
                offset: 0,
            },
            end: Position {
                line: 1,
                column: 4,
                offset: 3,
            },
        },
        range: (
            0,
            3,
        ),
    },
    Token {
        kind: StringLiteral,
        value: Some(
            "name",
        ),
        loc: SourceLocation {
            start: Position {
                line: 1,
                column: 5,
                offset: 4,
            },
            end: Position {
                line: 1,
                column: 11,
                offset: 10,
            },
        },
        range: (
            4,
            10,
        ),
    },
]
